# space_map

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: file_tree_model.cpp  file_tree_model.hpp  main.cpp  main_window.cpp  main_window.hpp  scanner.cpp  scanner.hpp  tree_node.cpp  tree_node.hpp
src/platform/: scanner_linux.cpp  scanner_mac.cpp  scanner_win.cpp
super_indepth_code_explainer/: cmake_and_main.md  data_model.md  main_window.md  platform_scanners.md  scanner.md  tree_node.md
